--- a/src/css/main.css
+++ b/src/css/main.css
@@ -430,12 +430,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 @media (min-width: 768px) {
   .container {
-    max-width: 900px;
+    /* max-width: 900px; */
+    padding-right: 2rem;
+    padding-left: 2rem;
   }
 }
 @media (min-width: 1024px) {
   .container {
-    max-width: 1024px;
+    /* max-width: 1024px; */
     padding-right: 5rem;
     padding-left: 5rem;
   }
@@ -1155,14 +1157,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
 
   @media (min-width: 768px) {
-    .sm\:container {
-      max-width: 900px;
-    }
   }
 
   @media (min-width: 1024px) {
     .sm\:container {
-      max-width: 1024px;
+      /* max-width: 1024px; */
       padding-right: 5rem;
       padding-left: 5rem;
     }
